# aoc2020

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/day10/: main.rs
src/day11/: main.rs
src/day5/: main.rs
src/day6/: main.rs
src/day7/: main.rs
src/day8/: main.rs
src/day9/: main.rs
