[package]
name = "aoc-2020"
version = "0.1.0"
authors = ["Ridan Vandenbergh <ridanvandenbergh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day1"
path = "src/day1/main.rs"

[dependencies]
scan_fmt = "0.2.5"